# Learning

./: .gitignore  CMakeLists.txt  README.txt  a.out  list.hpp  main.cpp  queue.cpp  queue.hpp  simple.s  stack.cpp  stack.hpp
Stack by class/: CMakeLists.txt  StckBClss.cpp  StckBClss.hpp  clssMain.cpp
Stack with preprocessor/: CMakeLists.txt  main.cpp  stack.hpp
basic branch/: digits.cpp  expression.cpp  number.cpp  sorting.cpp  vector.cpp
list/: CMakeLists.txt  ent.cpp  ent.h  main.cpp  outp.cpp
programm/: CMakeLists.txt  tutorial.cpp
programm/func/: CMakeLists.txt  func.cpp  lib.h
programm_rebuilt/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
programm_rebuilt/func/: Makefile  cmake_install.cmake
refactoring/: makefile
